// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Check how renders Should render with <LoadingOverlay /> 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm iTFmrJ"
    color="blue"
    disabled=""
    type="button"
  >
    Test button
    <div
      class="sc-AxhUy hkMxct"
      data-testid="LoadingOverlay"
    >
      <div
        class="sc-AxiKw dJBHzw"
        data-testid="Loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<Button /> Check how renders Should render without <LoadingOverlay /> 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm LxSyk"
    color="blue"
    type="button"
  >
    Test button
  </button>
</DocumentFragment>
`;
